Update #0.50: Leaks are fixed; norme-ready code

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -111,9 +111,8 @@ $(DIR_O)/%.o: $(DIR_S)/%.c
 	@$(CC) $(FLAGS) -I $(HEADER) -o $@ -c $<
 
 norme:
-	norminette $(HEADER)
-	@echo
-	norminette $(SOURCES)
+	@norminette $(HEADER)
+	@norminette $(SOURCES)
 
 clean:
 	@rm -f $(OBJS)
